# vapi-multilingual-voice-assistant

./: .env  README.md  pyproject.toml
vapi-dental-clinic/: main.py
vapi-dental-clinic/core/: config.py  vapi_client.py
vapi-dental-clinic/models/: agent_config.py
vapi-dental-clinic/services/: assistant_service.py  squad_service.py
vapi-dental-clinic/utils/: logging_config.py
